// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app renders correctly authenticated 1`] = `
.c6 {
  max-height: 50px;
  padding: 12px;
  border: none;
  background-color: #4D02EE;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c6:hover {
  opacity: 0.90;
}

.c6:focus {
  outline: none;
}

.c6:active {
  opacity: 0.80;
}

.c8 {
  background-color: transparent;
  border: 1px solid #4D02EE;
}

.c4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #F8F8F8;
}

.c4:hover {
  opacity: 0.90;
}

.c1 {
  height: 50px;
  padding: 16px;
  display: grid;
  grid-template-columns: [logo] 200px [menu] 1fr [new-agent] 250px [logout] 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #1B1B1B;
}

.c5 {
  margin-right: 16px;
}

.c3 {
  grid-column: menu;
}

.c2 {
  grid-column: logo;
}

.c9 {
  grid-column: logout;
  float: right;
  width: 100px;
}

.c7 {
  grid-column: new-agent;
  margin-left: 25px;
  margin-right: 25px;
  max-width: 250px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  left: 0px;
  right: 0px;
  bottom: 32px;
  z-index: 2;
}

.c11 {
  display: grid;
  grid-template-rows: [title] 50px [list] 1fr;
  width: 100%;
  min-width: 0;
  background-color: #1B1B1B;
  border-radius: 8px;
  padding: 20px;
}

.c12 {
  grid-row: title;
  width: 100%;
  min-width: 0;
}

.c13 {
  width: 100%;
  min-width: 0;
  grid-row: list;
  list-style: none;
  padding-left: 0;
}

.c10 {
  display: grid;
  grid-template-columns: [agent-listing] 1fr 1fr;
  grid-template-rows: 1fr;
  margin: 25px;
}

.c0 {
  height: 100%;
  width: 100%;
}

@media (max-width:47.9375em) {
  .c10 {
    grid-template-columns: [agent-listing] 1fr;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        Apollo
      </div>
      <div
        className="c3"
      >
        <a
          className="c4 c5"
          href="/"
          onClick={[Function]}
        >
          Dashboard
        </a>
      </div>
      <button
        className="c6 c7"
        id="newAgentButton"
        onClick={[Function]}
      >
        Add new agent
      </button>
      <button
        className="c6 c8 c9"
        id="logoutButton"
        onClick={[Function]}
      >
        Logout
      </button>
    </div>
    <div>
      <div
        className="c10"
      >
        <div
          className="c11"
        >
          <h2
            className="c12"
          >
            Agents
          </h2>
          <ul
            className="c13"
          />
        </div>
      </div>
    </div>
    <span
      className="c14"
    />
  </div>
</div>
`;

exports[`app renders correctly unauthenticated 1`] = `
.c10 {
  max-height: 50px;
  padding: 12px;
  border: none;
  background-color: #4D02EE;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c10:hover {
  opacity: 0.90;
}

.c10:focus {
  outline: none;
}

.c10:active {
  opacity: 0.80;
}

.c5 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
}

.c8 {
  height: 80px;
}

.c9 {
  min-height: 50px;
  width: 100%;
  background: #F8F8F8;
  border: none;
  border-radius: 5px;
  font-family: 'Libre Franklin',sans-serif;
  font-size: 1rem;
  padding-left: 10px;
  opacity: 0.9;
  border: 1px solid transparent;
}

.c9:focus {
  outline: none;
  border: 1px solid #4D02EE;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: fixed;
  left: 0px;
  right: 0px;
  bottom: 32px;
  z-index: 2;
}

.c1 {
  height: 100%;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: grid;
  justify-items: center;
  -webkit-column-gap: 50px;
  column-gap: 50px;
  height: 90%;
  max-height: 650px;
  margin: 100px;
  grid-template-rows: [heading] 1fr [title] 1fr [content] 4fr;
  grid-template-columns: [img] 1fr [content] 1fr;
}

.c4 {
  grid-row: title;
  grid-column: content;
  color: #02A3EE;
}

.c6 {
  width: 100%;
  max-width: 400px;
  height: 350px;
  grid-row: content;
  grid-column: content;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  height: 75%;
  display: grid;
  grid-template-rows: auto;
  grid-row-gap: 40px;
}

.c3 {
  grid-column: img;
  grid-row: 2 / 4;
  width: 75%;
  max-width: 800px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 {
  height: 100%;
  width: 100%;
}

@media (max-width:47.9375em) {
  .c2 {
    grid-template-columns: [content] 1fr;
    grid-template-rows: [title] 1fr [content] 4fr [footer] 1fr;
    margin: 20px 20px 0px 20px;
  }
}

@media (max-width:47.9375em) {
  .c6 {
    box-shadow: none;
    background-color: #181818;
  }
}

@media (max-width:47.9375em) {
  .c3 {
    grid-column: 1;
    grid-row: footer;
    width: 100%;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <img
          className="c3"
          src={[Function]}
        />
        <h1
          className="c4"
        >
          Log in to Apollo
        </h1>
        <div
          className="c5 c6"
        >
          <form
            className="c7"
            onSubmit={[Function]}
          >
            <div
              className="c8"
            >
              <input
                className="c9"
                name="username"
                onChange={[Function]}
                placeholder="Username"
                type="username"
                value=""
              />
            </div>
            <div
              className="c8"
            >
              <input
                className="c9"
                name="password"
                onChange={[Function]}
                placeholder="Password"
                type="password"
                value=""
              />
            </div>
            <button
              className="c10"
            >
              Log in
            </button>
          </form>
        </div>
      </div>
    </div>
    <span
      className="c11"
    />
  </div>
</div>
`;
